# meduzzen_intern_backend

./: .dockerignore  .env-non-dev.sample  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  hashing.py
app/db/: __init__.py  user_model.py  user_models.py
app/routers/: user_routers.py
app/schemas/: user.py  user_schemas.py
app/services/: user_crud.py
app/tests/: test_main.py  test_user_routers.py
app/utils/: exception_handler.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 07360bd27636_recreate_user_model.py  11025aee89f0_initial_migration.py  7f7191b0c463_add_avatar_field.py  94e70c95dd5a_add_user_model.py  d11ea899588f_test_migration.py
