[tool.poetry]
name = "quizapp"
version = "0.1.0"
description = ""
authors = ["Kapitoshka-a <taraspanechko737@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
